# TDM-GEO-AnalysisZones-Releases

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/taz/: WFv910_TAZ.shp.xml
scripts/: export.py  publish_agol.py  sync_agol.py  validate.py
src/analysiszones/: agol.py  validate.py
